# vision-models-from-scrach

./: .flake8  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
environments/: Dockerfile
environments/gpu/: docker-compose.yaml
notebooks/: test.ipynb
src/modules/: encoder_block.py  multi_head_self_attention.py  vit_input_layer.py
src/vision_transformer/: vision_transformer.py
src/vision_transformer/modules/: encoder_block.py  multi_head_self_attention.py
tests/src/modules/: test_vit_input_layer.py
