[tool.poetry]
name = "ml-env"
version = "0.1.0"
description = "My ml project"
authors = ["ta-ke-inf <hirotake.stu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ml_env"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
isort = "^5.12.0"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat_footnote = "^0.1.1"
flake8 = "^6.0.0"
mypy = "^1.3.0"
attrs = "^23.1.0"
pytest = "^7.3.1"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
opencv-python = "^4.7.0.72"
librosa = "^0.10.0.post2"
optuna = "^3.1.1"
pandas = "^2.0.1"
seaborn = "^0.12.2"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-2.0.0%2Bcu117-cp310-cp310-linux_x86_64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu117/torchaudio-2.0.0%2Bcu117-cp310-cp310-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.0%2Bcu117-cp310-cp310-linux_x86_64.whl"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
